--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,14 @@
+* {
+  box-sizing: border-box;
+  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  display: none;
+  width: 0;
+}
 html,
 body {
+  scrollbar-width: none;
   padding: 0;
   margin: 0;
   font-family: YekanBakh, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
@@ -9,8 +18,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
