folder structure refactor in install auth dpndncis

--- a/components/layouts/styles/Header.module.scss
+++ b/components/layouts/styles/Header.module.scss
@@ -1,7 +1,7 @@
 .AppBar {
   .loginBtn {
     border-radius: 20px;
-    color: #fff;
+    // color: #fff;
     font-weight: bolder;
     box-shadow: none;
   }
