--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -3,13 +3,14 @@
   font-family: YekanBakh;
   font-style: normal;
   font-weight: 300;
-  src: url("../fonts/YekanBakh/YekanBakh-Light/YekanBakh-Light.eot");
-  src: url("../fonts/YekanBakh/YekanBakh-Light/YekanBakh-Light.eot?#iefix")
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Light/YekanBakh-Light.eot");
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Light/YekanBakh-Light.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-8 */ url("../fonts/YekanBakh/YekanBakh-Light/YekanBakh-Light.woff")
+    /* IE6-8 */
+      url("../helper/fonts/YekanBakh/YekanBakh-Light/YekanBakh-Light.woff")
       format("woff"),
     /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-      url("../fonts/YekanBakh/YekanBakh-Light/YekanBakh-Light.ttf")
+      url("../helper/fonts/YekanBakh/YekanBakh-Light/YekanBakh-Light.ttf")
       format("truetype");
 }
 
@@ -17,14 +18,14 @@
   font-family: YekanBakh;
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/YekanBakh/YekanBakh-Regular/YekanBakh-Regular.eot");
-  src: url("../fonts/YekanBakh/YekanBakh-Regular/YekanBakh-Regular.eot?#iefix")
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Regular/YekanBakh-Regular.eot");
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Regular/YekanBakh-Regular.eot?#iefix")
       format("embedded-opentype"),
     /* IE6-8 */
-      url("../fonts/YekanBakh/YekanBakh-Regular/YekanBakh-Regular.woff")
+      url("../helper/fonts/YekanBakh/YekanBakh-Regular/YekanBakh-Regular.woff")
       format("woff"),
     /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-      url("../fonts/YekanBakh/YekanBakh-Regular/YekanBakh-Regular.ttf")
+      url("../helper/fonts/YekanBakh/YekanBakh-Regular/YekanBakh-Regular.ttf")
       format("truetype");
 }
 
@@ -32,13 +33,14 @@
   font-family: YekanBakh;
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/YekanBakh/YekanBakh-Medium/YekanBakh-Medium.eot");
-  src: url("../fonts/YekanBakh/YekanBakh-Medium/YekanBakh-Medium.eot?#iefix")
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Medium/YekanBakh-Medium.eot");
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Medium/YekanBakh-Medium.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-8 */ url("../fonts/YekanBakh/YekanBakh-Medium/YekanBakh-Medium.woff")
+    /* IE6-8 */
+      url("../helper/fonts/YekanBakh/YekanBakh-Medium/YekanBakh-Medium.woff")
       format("woff"),
     /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-      url("../fonts/YekanBakh/YekanBakh-Medium/YekanBakh-Medium.ttf")
+      url("../helper/fonts/YekanBakh/YekanBakh-Medium/YekanBakh-Medium.ttf")
       format("truetype");
 }
 
@@ -46,13 +48,14 @@
   font-family: YekanBakh;
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/YekanBakh/YekanBakh-Bold/YekanBakh-Bold.eot");
-  src: url("../fonts/YekanBakh/YekanBakh-Bold/YekanBakh-Bold.eot?#iefix")
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Bold/YekanBakh-Bold.eot");
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Bold/YekanBakh-Bold.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-8 */ url("../fonts/YekanBakh/YekanBakh-Bold/YekanBakh-Bold.woff")
+    /* IE6-8 */
+      url("../helper/fonts/YekanBakh/YekanBakh-Bold/YekanBakh-Bold.woff")
       format("woff"),
     /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-      url("../fonts/YekanBakh/YekanBakh-Bold/YekanBakh-Bold.ttf")
+      url("../helper/fonts/YekanBakh/YekanBakh-Bold/YekanBakh-Bold.ttf")
       format("truetype");
 }
 
@@ -60,13 +63,14 @@
   font-family: YekanBakh;
   font-style: normal;
   font-weight: 800;
-  src: url("../fonts/YekanBakh/YekanBakh-Heavy/YekanBakh-Heavy.eot");
-  src: url("../fonts/YekanBakh/YekanBakh-Heavy/YekanBakh-Heavy.eot?#iefix")
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Heavy/YekanBakh-Heavy.eot");
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Heavy/YekanBakh-Heavy.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-8 */ url("../fonts/YekanBakh/YekanBakh-Heavy/YekanBakh-Heavy.woff")
+    /* IE6-8 */
+      url("../helper/fonts/YekanBakh/YekanBakh-Heavy/YekanBakh-Heavy.woff")
       format("woff"),
     /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-      url("../fonts/YekanBakh/YekanBakh-Heavy/YekanBakh-Heavy.ttf")
+      url("../helper/fonts/YekanBakh/YekanBakh-Heavy/YekanBakh-Heavy.ttf")
       format("truetype");
 }
 
@@ -74,12 +78,13 @@
   font-family: YekanBakh;
   font-style: normal;
   font-weight: 900;
-  src: url("../fonts/YekanBakh/YekanBakh-Fat/YekanBakh-Fat.eot");
-  src: url("../fonts/YekanBakh/YekanBakh-Fat/YekanBakh-Fat.eot?#iefix")
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Fat/YekanBakh-Fat.eot");
+  src: url("../helper/fonts/YekanBakh/YekanBakh-Fat/YekanBakh-Fat.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-8 */ url("../fonts/YekanBakh/YekanBakh-Fat/YekanBakh-Fat.woff")
+    /* IE6-8 */
+      url("../helper/fonts/YekanBakh/YekanBakh-Fat/YekanBakh-Fat.woff")
       format("woff"),
     /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-      url("../fonts/YekanBakh/YekanBakh-Fat/YekanBakh-Fat.ttf")
+      url("../helper/fonts/YekanBakh/YekanBakh-Fat/YekanBakh-Fat.ttf")
       format("truetype");
 }
