--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,11 +11,18 @@ body {
   scrollbar-width: none;
   padding: 0;
   margin: 0;
-  font-family: YekanBakh, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--yekan-font), -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+@import '../helper/fonts/fonts.css';
+.MuiTooltip-tooltip,
+.MuiDrawer-paper {
+  font-family: YekanBakh !important;
+  font-display: swap;
 }
