--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import '../helper/fonts/fonts.css';
 * {
   box-sizing: border-box;
   scrollbar-width: none;
@@ -11,18 +12,22 @@ body {
   scrollbar-width: none;
   padding: 0;
   margin: 0;
-  font-family: var(--yekan-font), -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
+  font-family: YekanBakh, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-@import '../helper/fonts/fonts.css';
 .MuiTooltip-tooltip,
 .MuiDrawer-paper {
   font-family: YekanBakh !important;
   font-display: swap;
+}
+.cl-userButtonBox,
+.cl-userButtonTrigger,
+.cl-userButtonAvatarBox {
+  width: 45px;
+  height: 45px;
 }
