--- a/components/modules/styles/Post.module.scss
+++ b/components/modules/styles/Post.module.scss
@@ -1,7 +1,6 @@
 .banner {
   cursor: pointer;
   border-radius: 20px;
-  width: -webkit-fill-available;
+  width: 100%;
   height: 100%;
-  // transform: perspective(1000px) rotateX(0deg);
 }
