mobile blue highlight removed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,14 @@ a {
   color: inherit;
   text-decoration: none;
 }
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .MuiTooltip-tooltip,
 .MuiDrawer-paper {
   font-family: YekanBakh !important;
