--- a/src/app/variables.css
+++ b/src/app/variables.css
@@ -1,41 +1,41 @@
 :root {
-  --mui-background: #fff;
-  --mui-text: #000;
-  --mui-background-paper: #e6e6e6;
-  --mui-primary: #ffb300;
+  --mui-background: rgb(255, 255, 255);
+  --mui-text: rgb(0, 0, 0);
+  --mui-background-paper: rgb(230, 230, 230);
+  --mui-primary: rgb(255, 179, 0);
   --mui-primary-light: rgb(255, 194, 51);
   --mui-primary-contrastcolor: rgba(0, 0, 0, 0.87);
-  --mui-secondary: #1a0090;
+  --mui-secondary: rgb(26, 0, 144);
   --mui-secondary-light: rgb(71, 51, 166);
-  --mui-secondary-contrastcolor: #fff;
-  --mui-error: #f44336;
-  --mui-error-light: #e57373;
-  --mui-error-contrastcolor: #fff;
-  --mui-warning: #2196f3;
+  --mui-secondary-contrastcolor: rgb(255, 255, 255);
+  --mui-error: rgb(244, 67, 54);
+  --mui-error-light: rgb(229, 115, 115);
+  --mui-error-contrastcolor: rgb(255, 255, 255);
+  --mui-warning: rgb(33, 150, 243);
   --mui-warning-light: rgb(77, 171, 245);
-  --mui-warning-contrastcolor: #fff;
-  --mui-info: #29b6f6;
-  --mui-info-light: #4fc3f7;
+  --mui-warning-contrastcolor: rgb(255, 255, 255);
+  --mui-info: rgb(41, 182, 246);
+  --mui-info-light: rgb(79, 195, 247);
   --mui-info-contrastcolor: rgba(0, 0, 0, 0.87);
-  --mui-success: #66bb6a;
-  --mui-success-light: #81c784;
+  --mui-success: rgb(102, 187, 106);
+  --mui-success-light: rgb(129, 199, 132);
   --mui-success-contrastcolor: rgba(0, 0, 0, 0.87);
   --mui-divider: rgba(255, 255, 255, 0.12);
-  --mui-neutral: #64748b;
-  --mui-neutral-contrastcolor: #fff;
+  --mui-neutral: rgb(100, 116, 139);
+  --mui-neutral-contrastcolor: rgb(255, 255, 255);
   --mui-profile: rgba(178, 125, 0, 0.11);
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --mui-background: #000;
-    --mui-text: #fff;
-    --mui-background-paper: #202020;
+    --mui-background: rgb(0, 0, 0);
+    --mui-text: rgb(255, 255, 255);
+    --mui-background-paper: rgb(32, 32, 32);
     --mui-primary: rgb(178, 125, 0);
     --mui-secondary: rgb(18, 0, 100);
-    --mui-error: #d32f2f;
+    --mui-error: rgb(211, 47, 47);
     --mui-warning: rgb(23, 105, 170);
-    --mui-info: #0288d1;
-    --mui-success: #388e3c;
+    --mui-info: rgb(2, 136, 209);
+    --mui-success: rgb(56, 142, 60);
     --mui-divider: rgba(0, 0, 0, 0.12);
   }
 }
