tailwind config for colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,7 @@
       --color-info: 2, 136, 209;
       --color-success: 56, 142, 60;
       --color-divider: 0, 0, 0;
+      --color-profile: 180, 127, 2, 0.48;
     }
   }
 }
